<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpotiHifi</string>
    <string name="action_settings">Settings</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play Any</string>
    <string name="action_pause">Pause</string>
    <string name="action_skip">Skip</string>
    <string name="action_stop">Stop</string>
    <string name="action_songs">Songs</string>
    <string name="action_artists">Artists</string>
    <string name="action_playlists">Playlists</string>
    <string name="action_info">Info</string>
	<string name="action_ctx_play">Play</string>

	<string name="title_activity_settings">Settings</string>
	
    <!-- Preferences -->
    <string name="pref_server_ip">Server IP Address</string>
    <string name="pref_server_ip_default">192.168.1.100</string>
    <string name="pref_server_port">Server IP Address</string>
    <string name="pref_server_port_default">8081</string>	
		
</resources>